--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -12,3 +12,4 @@ block content
       #form-group
         label Body:
         textarea.form-control(name='body')
+      input.btn.btn-primary(type='submit',value='Submit')
