--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,9 +2,24 @@ doctype html
 html
   head
     title knowledgebase
+    link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
   body
-    block content
-    br
-    hr
-    footer
-      p Copyright &copy; 2017
+    nav.navbar.navbar-expand-md.navbar-dark.bg-dark
+      a.navbar-brand(href='/') KnowledgeBase
+      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarsExampleDefault', aria-controls='navbarsExampleDefault', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      #navbarsExampleDefault.collapse.navbar-collapse
+        ul.navbar-nav.mr-auto
+          li
+            a.nav-link(href='/') Home
+          li
+            a.nav-link(href='/articles/add') Add article
+
+    .container
+      block content
+      br
+      hr
+      footer
+        p Copyright &copy; 2020
+    script(src='/bower_components/jquery/dist/jquery.js')
+    script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
