--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,7 @@ html
             a.nav-link(href='/articles/add') Add article
 
     .container
+      != messages('message', locals)
       block content
       br
       hr
