--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,11 @@ html
             a.nav-link(href='/') Home
           li
             a.nav-link(href='/articles/add') Add article
-
+        ul.navbar-nav.navbar-right
+          li
+            a.nav-link(href='/users/register') Register
+          li
+            a.nav-link(href='/users/login') Login
     .container
       != messages('message', locals)
       if errors
