--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,10 +16,14 @@ html
           li
             a.nav-link(href='/articles/add') Add article
         ul.navbar-nav.navbar-right
-          li
-            a.nav-link(href='/users/register') Register
-          li
-            a.nav-link(href='/users/login') Login
+          if user
+            li
+              a.nav-link(href='/users/logout') Logout
+          else
+            li
+              a.nav-link(href='/users/register') Register
+            li
+              a.nav-link(href='/users/login') Login
     .container
       != messages('message', locals)
       if errors
