--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,13 +2,17 @@ doctype html
 html
   head
     title knowledgebase
+    // chargement des CSS
     link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet' href='/css/style.css')
   body
+    // barre de navigation
+    // .xxx.yyy => class="xxx yyy"
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
       a.navbar-brand(href='/') KnowledgeBase
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarsExampleDefault', aria-controls='navbarsExampleDefault', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
+      // TODO ???
       #navbarsExampleDefault.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
           li
@@ -26,15 +30,19 @@ html
             li
               a.nav-link(href='/users/login') Login
     .container
+      // d'abord affichage des messages
       != messages('message', locals)
       if errors
         each error, i in errors
           div(class="alert alert-danger") #{error.msg}
+      // affichage du bloc de contenu (via les fils)
       block content
       br
+      // hr : ligne de rupture
       hr
       footer
         p Copyright &copy; 2020
-    script(src='/bower_components/jquery/dist/jquery.js')
+    // chargement des scripts dans la dernière partie du body
     script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
+    script(src='/bower_components/jquery/dist/jquery.js')
     script(src='/js/main.js')
