--- a/views/article.pug
+++ b/views/article.pug
@@ -9,3 +9,5 @@ block content
     if user.id ==article.author
       a.btn.btn-default(href='/articles/edit/'+article._id) Edit
       a.btn.btn-danger.delete-article(href='#',data-id=article._id) Delete
+
+//- router.get('/:id', function(req,res){ ...
