--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,7 +31,14 @@ html
               a.nav-link(href='/users/login') Login
     .container
       // d'abord affichage des messages
+      // https://pugjs.org/language/code.html
+      // inline JavaScript code
+      // Unescaped buffered code starts with !=.
+      // It evaluates the JavaScript expression and outputs the result.
+      // https://github.com/visionmedia/express-messages
       != messages('message', locals)
+      // https://pugjs.org/language/iteration.html
+      // each val, key in {1: 'one', 2: 'two', 3: 'three'}
       if errors
         each error, i in errors
           div(class="alert alert-danger") #{error.msg}
